--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
 
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign up<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'users:registration' %}">Sign up</a>
       </li>
       <li class="nav-item mr-5">
-        <a class="nav-link" href="#">Sign in<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'users:login' %}"">Sign in</a>
       </li>
     </ul>
 
@@ -39,7 +39,14 @@
     </form>
   </div>
 </nav>
-    <div class="container">
+    <div class="container my-3">
+            {% if messages %}
+        <ul class="messages" style="list-style-type: none;">
+            {% for message in messages %}
+            <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
     {% block content %}
     {% endblock %}
     </div>
