--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,4 +1,38 @@
 {% extends 'base.html' %}
 {% block content %}
-asdasdas
+
+<form method="post">
+    {{ user_form.non_field_errors }}
+    <div class="form-group">
+    {% csrf_token %}
+    {{ user_form.username.label_tag }}
+    {{ user_form.username }}
+    <small id="usernameHelp" class="form-text text-muted">{{ user_form.username.errors }}</small>
+    </div>
+
+    <div class="form-group">
+    {% csrf_token %}
+    {{ user_form.email.label_tag }}
+    {{ user_form.email }}
+    <small id="emailHelp" class="form-text text-muted">{{ user_form.email.errors }}</small>
+    </div>
+
+    <div class="form-group">
+    {% csrf_token %}
+    {{ user_form.password1.label_tag }}
+    {{ user_form.password1 }}
+    <small id="password1Help" class="form-text text-muted">{{ user_form.password1.errors }}</small>
+    </div>
+
+    <div class="form-group">
+    {% csrf_token %}
+    {{ user_form.password2.label_tag }}
+    {{ user_form.password2 }}
+    <small id="password2Help" class="form-text text-muted">{{ user_form.password2.errors }}</small>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Sign up</button>
+
+  </form>
+
 {% endblock %}
