--- a/templates/base.html
+++ b/templates/base.html
@@ -17,20 +17,27 @@
   <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">SUBSCRIPTION SERVICE</a>
+  <a class="navbar-brand" href="{% url 'mainapp:index' %}">SUBSCRIPTION SERVICE</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto mr-5">
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+      </li>
+
+        {% else %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'users:registration' %}">Sign up</a>
       </li>
-      <li class="nav-item mr-5">
-        <a class="nav-link" href="{% url 'users:login' %}"">Sign in</a>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:login' %}">Sign in</a>
       </li>
+        {% endif %}
     </ul>
 
     <form class="form-inline my-2 my-lg-0">
