--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -19,7 +19,7 @@ Login
     <small id="password2Help" class="form-text text-muted">{{ form.password.errors }}</small>
     </div>
 
-    <button type="submit" class="btn btn-primary">Sign up</button>
+    <button type="submit" class="btn btn-dark">Sign up</button>
 
   </form>
 
