--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -31,7 +31,7 @@ Registration
     <small id="password2Help" class="form-text text-muted">{{ form.password2.errors }}</small>
     </div>
 
-    <button type="submit" class="btn btn-primary">Sign up</button>
+    <button type="submit" class="btn btn-dark">Sign up</button>
 
   </form>
 
