--- a/main_app/templates/main_app/categories.html
+++ b/main_app/templates/main_app/categories.html
@@ -5,7 +5,7 @@ Categories
 {% block content %}
 {% for category in categories %}
 <div class="row mt-3">
-    <h3>{{ category.name }}</h3>
+    <a href="{{ category.slug }}"><h3>{{ category.name }}</h3></a>
     <div class="ml-auto">
         <a class="" href="#"><button type="button" class="btn btn-dark">Subscribe</button></a>
     </div>
