--- a/main_app/templates/main_app/categories.html
+++ b/main_app/templates/main_app/categories.html
@@ -5,10 +5,30 @@ Categories
 {% block content %}
 {% for category in categories %}
 <div class="row mt-3">
-    <a href="{{ category.slug }}"><h3>{{ category.name }}</h3></a>
+    <h3>{{ category.name }}</h3>
+    {% if user.is_authenticated %}
     <div class="ml-auto">
-        <a class="" href="#"><button type="button" class="btn btn-dark">Subscribe</button></a>
+        {% if category in user_cabinet.subscriptions.all %}
+        <form method="POST">
+        {% csrf_token %}
+            <input type="hidden" name="unsubscribe" value="{{ category.name }}">
+            <button type="submit" class="btn btn-dark">Unsubscribe</button>
+        </form>
+
+        {% else %}
+        <form method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="subscribe" value="{{ category.name }}">
+            <button type="submit" class="btn btn-dark">Subscribe</button>
+        </form>
+
+        {% endif %}
     </div>
+    {% else %}
+    <div class="ml-auto">
+        <a class="" href="{% url 'users:login' %}"><button type="button" class="btn btn-dark">Login to Subscribe</button></a>
+    </div>
+    {% endif %}
 </div>
 <div class="row mt-3">
   {{ category.description }}
