--- a/main_app/templates/main_app/categories.html
+++ b/main_app/templates/main_app/categories.html
@@ -26,7 +26,7 @@ Categories
     </div>
     {% else %}
     <div class="ml-auto">
-        <a class="" href="{% url 'users:login' %}"><button type="button" class="btn btn-dark">Login to Subscribe</button></a>
+        <a class="" href="{% url 'users:login' %}?next={% url 'main_app:categories' %}"><button type="button" class="btn btn-dark">Login to Subscribe</button></a>
     </div>
     {% endif %}
 </div>
