--- a/users/templates/users/cabinet.html
+++ b/users/templates/users/cabinet.html
@@ -6,7 +6,7 @@
 <h2>{{ user.username }} subscriptions:</h2>
 {% for category in user.user_cabinet.subscriptions.all %}
 <div class="row mt-3">
-    <h3>{{ category.name }}</h3>
+    <a href="{% url 'main_app:category' category_slug=category.slug %}"><h3>{{ category.name }}</h3></a>
     <div class="ml-auto">
         <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'users:cabinet' %}">
         {% csrf_token %}
