--- a/users/templates/users/cabinet.html
+++ b/users/templates/users/cabinet.html
@@ -4,15 +4,29 @@
 {% endblock %}
 {% block content %}
 <h2>{{ user.username }} subscriptions:</h2>
+
 {% for category in user.user_cabinet.subscriptions.all %}
 <div class="row mt-3">
     <a href="{% url 'main_app:category' category_slug=category.slug %}"><h3>{{ category.name }}</h3></a>
     <div class="ml-auto">
-        <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'users:cabinet' %}">
-        {% csrf_token %}
+        <div class="row">
+            <div class="mr-3">
+
+            <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'users:cabinet' %}">
+            {% csrf_token %}
+            <input type="hidden" name="unsubscribe" value="{{ category.name }}">
+            <button type="submit" class="btn btn-dark">Send me emails</button>
+            </form>
+            </div>
+            <div class="">
+            <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'users:cabinet' %}">
+            {% csrf_token %}
             <input type="hidden" name="unsubscribe" value="{{ category.name }}">
             <button type="submit" class="btn btn-dark">Unsubscribe</button>
-        </form>
+            </form>
+            </div>
+        </div>
+
     </div>
 </div>
 <div class="row mt-3">
