--- a/users/templates/users/cabinet.html
+++ b/users/templates/users/cabinet.html
@@ -5,16 +5,15 @@
 {% block content %}
 <h2>{{ user.username }} subscriptions:</h2>
 
-{% for category in user.user_cabinet.subscriptions.all %}
+{% for category in categories %}
 <div class="row mt-3">
     <a href="{% url 'main_app:category' category_slug=category.slug %}"><h3>{{ category.name }}</h3></a>
     <div class="ml-auto">
         <div class="row">
             <div class="mr-3">
-
-            <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'users:cabinet' %}">
+            <form method="POST">
             {% csrf_token %}
-            <input type="hidden" name="unsubscribe" value="{{ category.name }}">
+            <input type="hidden" name="send_emails" value="{{ category.name }}">
             <button type="submit" class="btn btn-dark">Send me emails</button>
             </form>
             </div>
