--- a/categories/templates/categories/subscribe.html
+++ b/categories/templates/categories/subscribe.html
@@ -7,7 +7,7 @@ Subscribe to ca?
 <div class="row mt-3">
     <h3>{{ category.name }}</h3>
     <div class="ml-auto">
-        <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'main_app:category' category_slug=category.slug %}">
+        <form method="POST" action="{% url 'categories:categories' %}?next={% url 'categories:category' category_slug=category.slug %}">
             {% csrf_token %}
             <input type="hidden" name="subscribe" value="{{ category.name }}">
             <button type="submit" class="btn btn-dark">Subscribe</button>
