--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'main_app:index' %}">SUBSCRIPTION SERVICE</a>
+  <a class="navbar-brand" href="{% url 'categories:index' %}">SUBSCRIPTION SERVICE</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,7 +26,7 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-        <a class="nav-link" href="{% url 'main_app:categories' %}">Categories</a>
+        <a class="nav-link" href="{% url 'categories:categories' %}">Categories</a>
       </li>
 
     </ul>
