--- a/users/templates/users/cabinet.html
+++ b/users/templates/users/cabinet.html
@@ -7,7 +7,7 @@
 
 {% for category in categories %}
 <div class="row mt-3">
-    <a href="{% url 'main_app:category' category_slug=category.slug %}"><h3>{{ category.name }}</h3></a>
+    <a href="{% url 'categories:category' category_slug=category.slug %}"><h3>{{ category.name }}</h3></a>
     <div class="ml-auto">
         <div class="row">
             <div class="mr-3">
@@ -18,7 +18,7 @@
             </form>
             </div>
             <div class="">
-            <form method="POST" action="{% url 'main_app:categories' %}?next={% url 'users:cabinet' %}">
+            <form method="POST" action="{% url 'categories:categories' %}?next={% url 'users:cabinet' %}">
             {% csrf_token %}
             <input type="hidden" name="unsubscribe" value="{{ category.name }}">
             <button type="submit" class="btn btn-dark">Unsubscribe</button>
