adding email subscription/unsubscription

--- a/categories/templates/categories/subscribe.html
+++ b/categories/templates/categories/subscribe.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Subscribe to ca?
+Subscribe to category?
 {% endblock %}
 {% block content %}
 <h4>You must subscribe to {{ category.name }} first</h4>
